syntax = "proto3";

package qbv;

/*
 * IEEE 802.1Qbv Gate Control List (GCL)
 *
 * References:
 * - IEEE 802.1Q-2022 Clause 8.6.9 (Time-Aware Shaping)
 * - Clause 12.30 (Managed Objects for Qbv)
 */

enum TimestampReference {
  UNKNOWN = 0;
  UNIX_EPOCH = 1;
  DEVICE_BOOT_TIME = 2;
}

enum AdminState {
  DISABLED = 0;
  ENABLED = 1;
}

message GateControlEntry {
  uint32 index = 1;
  uint64 time_interval = 2;    // nanoseconds
  bytes gate_states = 3;       // bitmap: bit=1 open, 0 closed
  string description = 4;
}

message GateControlList {
  string schedule_id = 1;
  uint64 base_time = 2;
  TimestampReference base_time_ref = 3;
  uint64 cycle_time = 4;
  repeated GateControlEntry entries = 5;
  AdminState admin_state = 6;
  string description = 7;

  // -----------------------------------------------------------
  // NON-STANDARD EXTENSION:
  // Optional per-interface time offset (in nanoseconds).
  // This allows for aligning base_time across ports that have
  // asymmetric delays or internal scheduling differences.
  //
  // NOTE: This is NOT part of IEEE 802.1Qbv and is implementation-specific.
  // It should only be used in environments where precise hardware scheduling
  // compensation is required.
  // -----------------------------------------------------------
  optional int64 interface_time_offset_ns = 8;
}
